Shadow DOM: :host() From The First Shadow Context Should Not Style All Shadow Context https://bugs.webkit.org/show_bug.cgi?id=156235 <rdar://problem/24668206>

Reviewed by Andreas Kling.

Source/WebCore:

Test: fast/shadow-dom/host-style-sharing.html

* style/StyleSharingResolver.cpp:
(WebCore::Style::SharingResolver::resolve):
(WebCore::Style::SharingResolver::canShareStyleWithElement):

    Disallow style sharing for shadow hosts affected by :host pseudo class rules.

LayoutTests:

* fast/shadow-dom/host-style-sharing-expected.html: Added.
* fast/shadow-dom/host-style-sharing.html: Added.



Canonical link: https://commits.webkit.org/174335@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@199060 268f45cc-cd09-0410-ab3c-d52691b4dbfc